--- a/app/templates/heroSetup (backup).html
+++ b/app/templates/heroSetup (backup).html
@@ -49,7 +49,7 @@
 
 
 
-  <form action="/account/{{ user.username }}" method="post" novalidate>
+  <form action="/heroSetup/{{ user.username }}" method="post" novalidate>
 
 <script>
   function isNumber9(evt) {
