--- a/app/templates/progress.html
+++ b/app/templates/progress.html
@@ -6,7 +6,7 @@
     <div class="col-lg-12">
       <h1 class="display-4">Hero Progress</h1>
       <hr>
-      <p class="instructions">Progress by rarity, element and maxed heroes. Based on Star Level and Medals in <a href="{{ url_for('heroSetup', username=current_user.username) }}">Hero Setup</a>.</p>
+      <p class="instructions">Progress by rarity, element and maxed heroes. Based on Star Level and Medals which can be input in <a href="{{ url_for('account', username=current_user.username) }}">Your Account</a>.</p>
         <hr>
     </div>
   </div>
