--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -19,10 +19,10 @@
                 <td width="150">Member since:</td><td>{{ user.registeredProper(user.registered) }}</td>
             </tr>
             <tr>
-                <td width="150">Total Power:</td><td>6 854 214</td>
+                <td width="150">Total Power:</td><td>{{ user.totalPower() }}</td>
             </tr>
             <tr>
-                <td width="150">Power per day:</td><td>16 584</td>
+                <td width="150">Power per day:</td><td>{{ user.powerPerDay() }}</td>
             </tr>
 
 
@@ -126,7 +126,7 @@
     <div class="input-group-prepend">
       <span class="input-group-text">Prism Power</span>
     </div>
-    <input type="text" class="form-control" value="0">
+    <input type="text" class="form-control" value="{{ user.prismPower }}" name="prismPower" onkeypress="return isNumber9(event)">
   </div>
     </div>
 
@@ -135,7 +135,7 @@
     <div class="input-group-prepend">
       <span class="input-group-text">Hero Power</span>
     </div>
-    <input type="text" class="form-control" value="0">
+    <input type="text" class="form-control" value="{{ user.heroPower }}" name="heroPower" onkeypress="return isNumber9(event)">
   </div>
     </div>
 
@@ -144,7 +144,7 @@
     <div class="input-group-prepend">
       <span class="input-group-text">Artifact Power</span>
     </div>
-    <input type="text" class="form-control" value="0">
+    <input type="text" class="form-control" value="{{ user.artifactPower }}" name="artifactPower" onkeypress="return isNumber9(event)">
   </div>
     </div>
 
@@ -153,7 +153,7 @@
     <div class="input-group-prepend">
       <span class="input-group-text">Days Played</span>
     </div>
-    <input type="text" class="form-control" value="0">
+    <input type="text" class="form-control" value="{{ user.daysPlayed }}" name="daysPlayed" onkeypress="return isNumber9(event)">
   </div>
     </div>
 </div>
