--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -54,7 +54,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Artifacts</a>
+          <a class="nav-link" href="{{ url_for('artifacts', username=current_user.username) }}">Artifacts</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Boss Teams</a>
