Artifacts completed Models and Routes updated Base began rework for active links

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -81,8 +81,8 @@
 
 
       <div class="modal-body">
-        <p>Each field expects integer inputs. Mischievous behaviour and unintended inputs are controlled to some extent on the client-side through
-          scripts and standard attributes. These are utilized to ensure valid parameters. Once submitted a server-side validation will process the input as well.</p>
+        <p>Each field expects integer inputs. Mischievous behaviour and unintended inputs are controlled to some extent on the client-side.
+          These are utilized to ensure valid parameters. Once submitted a server-side validation will process the input as well.</p>
           <p><b>Prism Power</b> is used to calculate your Total Power and Power per day. Can be left at 0 if you do not care about this value.</p>
           <p><b>Hero Power</b> is used to calculate Gun Lord Artifacts as well as Total Power and Power per day. It's recommended you input this value.</p>
           <p><b>Artifact Power</b> is used to calculate your Total Power and Power per day. Can be left at 0 if you do not care about this value.</p>
