--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,7 +55,11 @@
             {% endif %}
         </li>
         <li class="nav-item">
+            {% if progressactive == 1 %}
+            <a class="nav-link active" href="{{ url_for('progress', username=current_user.username) }}">Progress</a>
+            {% else %}
             <a class="nav-link" href="{{ url_for('progress', username=current_user.username) }}">Progress</a>
+            {% endif %}
         </li>
 
         <li class="nav-item">
