Saving before big refactor of artifact functions

--- a/app/templates/artifacts.html
+++ b/app/templates/artifacts.html
@@ -7,6 +7,7 @@
     <h1 class="display-4">Artifacts</h1>
         <hr>
         <p class="instructions">Select your Artifacts and input their level. Their combined effects will be shown below.</p>
+        <p>{{ user.artDisplay(user.artAtk2("Fire")) }}</p>
         <hr>
     </div>
 </div>
