--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -66,7 +66,7 @@
           <a class="nav-link" href="{{ url_for('artifacts', username=current_user.username) }}">Artifacts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Boss Teams</a>
+          <a class="nav-link" href="{{ url_for('bossTeam', username=current_user.username) }}">Boss Teams</a>
         </li>
 
         <!--
